--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,77 +66,7 @@ body {
 /* 2 color: #2c3e50 */
 /* 3 color: #2ecc71 */
 
-.start-scene {
-	max-width: 300px;
-	width: 100%;
-	margin: 80px auto;
-	display: none;
-	visibility: hidden;
-}
-.game-title {
-	font-size: 3rem;
-	line-height: 3rem;
-	font-weight: bold;
-	margin: 0 auto 30px auto;
-}
-.game-title span {
-	display: block;
-	padding-top: 15px;
-}
-.create-msg, .join-msg {
-	margin: 0 auto 5px auto;
-}
-.divisor {
-	display: block;
-	margin: 20px auto 15px auto;
-}
-.btn-create, .btn-join {
-	display: block;
-	text-decoration: none;
-	font-size: 1.4rem;
-	padding: 5px;
-	color: #F6F6F6;
-	width: 120px;
-	margin: 0 auto;
-	border-radius: 4px;
-}
-.btn-create {
-	background: #27ae60;;
-}
-.btn-join {
-	background: #3498db;
-}
-.btn-create:hover, .btn-create:active {
-	background: #155e34;
-}
-.btn-join:hover, .btn-join:active {
-	background: #1d6ea4;
-}
-.overlay-create, .overlay-join {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-    height: 100%;
-	background: rgb(71, 69, 84, 0.6);
-	display: none;
-	visibility: hidden;
-}
-.create-form, .join-form {
-	max-width: 300px;
-	width: 100%;
-	max-height: 250px;
-	height: 100%;
-	margin: 220px auto 0 auto;
-	background: #f6f6f6;
-	border-radius: 5px;
-	border: #8C8C8C solid 1px;
-}
-.username-msg {
-	padding-top: 55px;
-	margin: 0 auto 5px auto;
-}
-.username-create, .username-join, .pin-code {
+.input {
 	margin: 0 auto 20px auto;
 	text-align: center;
 	border-radius: 4px;
@@ -146,46 +76,89 @@ body {
 	font-size: 1.2rem;
 	display: block;
 }
-.form-btn-create, .form-create-btn-cancel, .form-join-btn-cancel, .form-btn-join {
+.btn {
+	display: inline-block;
 	text-decoration: none;
 	font-size: 1.4rem;
-	padding: 8px 12px;
+	line-height: 1.4rem;
+	padding: 12px 12px;
 	color: #F6F6F6;
-	width: 120px;
-	margin: 0 6px;
+	margin: 0 5px;
 	border-radius: 4px;
 }
-.form-btn-create {
-	background: #27ae60;;
+.create { background: #27ae60; }
+.join {	background: #3498db; }
+.cancel { background: #e74c3c; }
+.create:hover, .create:active {	background: #155e34; }
+.join:hover, .join:active {	background: #1d6ea4; }
+.cancel:hover, .cancel:active {	background: #ac2315; }
+.start-scene {
+	max-width: 300px;
+	width: 100%;
+	margin: 80px auto;
+	display: none;
+	visibility: hidden;
 }
-.form-create-btn-cancel, .form-join-btn-cancel {
-	background: #e74c3c;
+.start-container .title {
+	font-size: 3rem;
+	line-height: 3rem;
+	font-weight: bold;
+	margin: 0 auto 30px auto;
 }
-.form-btn-create:hover, .form-btn-create:active {
-	background: #155e34;
+.start-container .title span {
+	display: block;
+	padding-top: 15px;
 }
-.form-create-btn-cancel:hover, .form-create-btn-cancel:active,
-.form-join-btn-cancel:hover, .form-join-btn-cancel:active {
-	background: #ac2315;
-}
-.join-form .username-msg {
-	padding-top: 20px;
-}
-.pin-msg {
-	padding-top: 10px;
+.start-container p {
 	margin: 0 auto 5px auto;
 }
-.username-join, .pin-code {
-	margin-bottom: 5px;
+.start-container .divisor {
+	display: block;
+	margin: 20px auto 15px auto;
 }
-.pin-code {
+.start-container .create, .start-container .join {
+	width: 120px;
+	margin: 0 auto;
+}
+.overlay-start-scene {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+    height: 100%;
+	background: rgb(71, 69, 84, 0.6);
+	display: none;
+	visibility: hidden;
+}
+.create-container, .join-container {
+	max-width: 300px;
+	width: 100%;
+	max-height: 250px;
+	height: 100%;
+	margin: 220px auto 0 auto;
+	background: #f6f6f6;
+	border-radius: 5px;
+	border: #8C8C8C solid 1px;
+}
+.create-container p {
+	padding-top: 55px;
+	margin: 0 auto 5px auto;
+}
+.join-container {
+	padding-top: 20px;
+}
+.join-container p {
+	padding-bottom: 5px;
+}
+.join-container .username {
+	margin-bottom: 10px;
+}
+.join-container .pin {
 	margin-bottom: 20px;
 }
-.form-btn-join {
-	background: #3498db;
-}
-.form-btn-join:hover, .form-btn-join:active {
-	background: #1d6ea4;
+.join-container .join, .join-container .cancel {
+	padding: 12px 16px;
+	margin: 0 10px;
 }
 .game-scene {
 	max-width: 300px;
@@ -260,7 +233,7 @@ body {
 .msg-pin {
 	padding-bottom: 8px;
 }
-.pin {
+.pin-text {
 	font-size: 2rem;
 	font-weight: bold;
 }
@@ -292,11 +265,11 @@ body {
 .exit:hover, .exit:active {
 	background: #ac2315;
 }
-.overlay-show {
+.show-overlay {
 	display: inherit;
 	visibility: visible;
 }
-.scene-show {
+.show-scene {
 	display: inherit;
 	visibility: visible;
 }
