--- a/public/css/style.css
+++ b/public/css/style.css
@@ -231,6 +231,7 @@ body {
 	display: block;
 	margin: 0  0 20px 0;
 }
+.game-end-container span { text-transform: capitalize; }
 .game-container {
     max-width: 300px;
     width: 100%;
